# daocker-system

./: .dockeringore  .gitignore  Dockerfile
.devcontainer/: devcontainer.json
daocker-system/: Cargo.toml  Daocker.toml  app.js  package-lock.json  package.json
daocker-system/config/: config.json
daocker-system/src/: app.rs  entity.rs  lib.rs  router.rs  service.rs  setting.rs  util.rs
daocker-system/src/entity/: login_dto.rs  result.rs  student.rs
daocker-system/src/router/: login.rs  student_route.rs
daocker-system/src/service/: student_service.rs
daocker-system/src/util/: jwt.rs
docs/: demo.md
sql/: demo.sql
tools/: docker-compose.yml
tools/k8s/: ingress.yaml  server-dp.yaml  server-svc.yaml  ui-dp.yaml  ui-svc.yaml
tools/k8s/latest/: mysql.yaml  server.yaml  standard.yaml  ui.yaml
tools/mid-mysql/: deploy-mysql.yaml  pv-mysql.yaml  pvc-mysql.yaml  service-mysql.yaml
